--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
         "@vueuse/core": "^12.8.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
+        "html5-qrcode": "^2.3.8",
         "laravel-vite-plugin": "^2.0.0",
         "lodash": "^4.17.21",
         "lucide-vue-next": "^0.468.0",
